# aula10_bootcamp

./: functional.py  pyproject.toml
01 - Classe X Funcao/: class.py
02 - Encapsulamento/: conexao.py  encaps.py  postgre.py  sqlite.py
03 - Heranca/: etl.py
04 - Polimorfismo/: override.py
data/: Vendas.xlsx  dados_transformados.csv  vendas.csv
