[tool.poetry]
name = "aula10-bootcamp"
version = "0.1.0"
description = ""
authors = ["Marcelo Shibuya <marcelo.hshibuya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
